--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.18.1",
+    "prettier": "^3.0.3",
     "typescript": "*",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
