lintコマンド追加&lintコマンドが動くように

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
+    "strictNullChecks": true,
 
     /* Linting */
     "strict": true,
