--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "lint": "eslint --fix . && prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
