--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "lint": "eslint --fix . && prettier --write .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ]
   },
   "dependencies": {
     "vue": "^3.3.4"
@@ -23,6 +30,8 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.18.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "typescript": "*",
     "vite": "^4.4.5",
