--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "lint": "eslint --fix . && prettier --write .",
+    "lint": "eslint --format compact --fix . && prettier --write .",
     "preview": "vite preview",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
@@ -14,7 +14,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,vue}": [
-      "eslint --fix",
+      "eslint --format compact --fix",
       "prettier --write --ignore-unknown"
     ]
   },
