--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "@storybook/addon-links": "^7.5.2",
     "@storybook/blocks": "^7.5.2",
     "@storybook/testing-library": "^0.2.2",
+    "@storybook/testing-vue": "^0.0.4",
     "@storybook/vue3": "^7.5.2",
     "@storybook/vue3-vite": "^7.5.2",
+    "@swc/core": "^1.3.95",
+    "@swc/jest": "^0.2.29",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/vue": "^8.0.0",
+    "@types/jest": "^29.5.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -41,6 +47,8 @@
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
