--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "test": "jest",
     "lint": "eslint --format compact --fix . && prettier --write .",
     "preview": "vite preview",
     "prepare": "husky install",
@@ -27,7 +28,7 @@
     "@storybook/addon-links": "^7.5.2",
     "@storybook/blocks": "^7.5.2",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/testing-vue": "^0.0.4",
+    "@storybook/testing-vue3": "^1.0.0",
     "@storybook/vue3": "^7.5.2",
     "@storybook/vue3-vite": "^7.5.2",
     "@swc/core": "^1.3.95",
@@ -38,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/vue3-jest": "^29.2.6",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.0.0",
