--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/vue3-jest": "^29.2.6",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.3.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
