--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "highcharts": "^11.2.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
