--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "highcharts": "^11.2.0",
+    "highcharts-vue": "^1.4.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
