fix: :adhesive_bandage: tsconfig.jsonの設定のせいでStorybookが動かなかったのを修正

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 
     "rootDir": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
