test: :package: install testing-library/user-event

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.0",
     "highcharts": "^11.2.0",
     "highcharts-vue": "^1.4.3",
