--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "jsx": "preserve",
     "strictNullChecks": true,
+    "noUncheckedIndexedAccess": true,
 
     /* Linting */
     "strict": true,
