--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
     - run: pnpm i --frozen-lockfile
 
     - name: Run tsc
-      run: vue-tsc
+      run: node_modules/.bin/vue-tsc
 
     - name: Run tests
       run: pnpm test
